Refactoring (#7)
Refactoring